...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description_header"
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Header" />

        <TextView
...
            android:contentDescription="@string/image_stub"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_no_photo_vector"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sound"
            style="@style/SoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_surround_sound_24"
            android:text=" Прослушать" />
    </LinearLayout>
...
